fixed alignment of titles

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* assign variables for colors used for ease and consistency */
 :root {
     --dark: #172121;
     --indep: #444554;
@@ -6,16 +7,15 @@
     --champ: #e5d0cc;
 }
 
+/* ensure images fill their containers */
 img {
     width: 100%;
-    height: 100%;
 }
 
+/* set up consistent font, text color and background color */
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
-    display: flex;
-    flex-direction: column;
     background-color: var(--mintCream);
     color: var(--dark);
 }
@@ -31,6 +31,7 @@ header {
     
 }
 
+/* create box shadow for name */
 header h1 {
     font-size: 175%;
     color: var(--champ);
@@ -45,6 +46,7 @@ header nav {
     font-size: 20px;
 }
 
+/* spacing of nav elements */
 nav ul li {
     display: inline-block;
     margin-left: 25px;
@@ -62,13 +64,13 @@ header a {
     position: relative;
 }
 
+/* adjust size of image container to and use position absolute to keeo in front of background and on the left */
 #self-photo {
     width: 9.5%;
     position: absolute;
     top: 12%;
     left: 2%;
     padding: 0;
-    z-index: 2;
 }
 
 #self-photo img {
@@ -76,14 +78,14 @@ header a {
     box-shadow: 1px 1px 15px 5px var(--indep);
 }
 
+/* use position absolute to see and position subtitle over background image */
 #subtitle {
     position: absolute;
     top: 50%;
     right: 5%;
-    z-index: 2;
 }
 
-
+/* specify only the h2 in the photo header section */
 #subtitle h2 {
     font-size: 120%;
 }
@@ -96,8 +98,22 @@ header a {
     color: var(--dark);
 }
 
+/* set specific width for .left and .right to ensure even horizontal placing of titles */
 .left {
+    width: 22%;
     height: 100%;
+    align-self: center;
+    padding: 1%;
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.right {
+    width: 78%;
+    padding: 1.5%;
+    margin: 0.75%;
+    border-left: 5px solid var(--dark);
 }
 
 h2 {
@@ -114,51 +130,11 @@ h2 {
     align-content: space around;
 }    
 
-#about-me .left {
-    width: 22%;
-    height: 100%;
-    padding: 1%;
-    margin: 0;
-}
-
-#about-me .right {
-    width: 78%;
-    padding: 1.5%;
-    margin: 0.75%;
-    border-left: 5px solid var(--dark);
-}
-
 #work {
     display: flex;
     flex-direction: row;
     justify-content: start;
-    align-items: stretch;
-    align-content: space around;
 }    
-
-#work .left {
-    width: 22%;
-    height: 100%;
-    padding: 1%;
-    margin: 0;
-}
-
-#work .right {
-    padding: 1%;
-    margin: 0.75%;
-    width: 78%;
-    border-left: 5px solid var(--dark);
-}
-
-#work a {
-    background-color: var(--indep);
-}
-
-#picbox {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
 
 #row2 {
     display: flex;
@@ -177,19 +153,33 @@ h2 {
 }
 
 #bigbox, .regbox {
-    border: 5px solid var(--indep);
     margin: 1%;
     position: relative;
 }
 
+/* border style around all images wrapped in <a> tag */
+a img {
+    border: 5px solid var(--indep);
+}
+
+/* use position absolute to see and position titles over images */
 .projectname {
     color: var(--champ);
+    font-size: 85%;
     position: absolute;
     top: 65%;
     left: 0;
-    z-index: 3;
     padding: 1.5%;
     background-color: var(--indep);
+}
+
+.regbox .projectname {
+    padding: 3.2%;
+}
+
+.projectname p {
+    font-size: 65%;
+    padding-top: 13%;
 }
 
 #contact-me {
@@ -197,23 +187,7 @@ h2 {
     flex-direction: row;
     justify-content: start;
     align-items: stretch;
-    align-content: space-around;
 }    
-
-#contact-me .left {
-    width: 22%;
-    height: 100%;
-    align-self: center;
-    padding: 1%;
-    margin: 0;
-}
-
-#contact-me .right {
-    padding: 1%;
-    margin: 0.75%;
-    width: 78%;
-    border-left: 5px solid var(--dark);
-}
 
 #contact-me a {
     padding: 1%;
@@ -225,23 +199,7 @@ h2 {
     flex-direction: row;
     justify-content: start;
     align-items: stretch;
-    align-content: space around;
 }    
-
-#resume .left {
-    width: 22%;
-    height: 100%;
-    align-self: center;
-    padding: 1%;
-    margin: 0;
-}
-
-#resume .right {
-    padding: 1%;
-    width: 78%;
-    border-left: 5px solid var(--dark);
-    margin: 0.75%;
-}
 
 #resume a {
     padding: 1%;
@@ -259,13 +217,10 @@ h2 {
     box-shadow: inset 0px 0px 5px var(--shadow), 0 0 10px var(--shadow);
   }
 
-@media screen and (max-width: 992px) {
-    /* header {
-        background-color: var(--darkMossGreen);
-    } */
-}
-
+/* for viewing with mobile phones */
 @media screen and (max-width: 768px) {    
+   
+   /* Place pictures in a single column */
     #row2 {
         display: flex;
         flex-direction: column;
@@ -280,42 +235,33 @@ h2 {
         align-items: center;
         align-content: space around;
     }
+
+    /* keep second through fifth pictures smaller than first */
     .regbox {
-        width: 50%;
+        width: 75%;
     }
+
+    /* justify smaller pictures in center */
     .regbox a {
         justify-items: center;
     }
+
+    /* put section titles above each section instead of on the left  */
     #about-me, #work, #contact-me, #resume {
         flex-direction: column;
         align-items: center;
     }
     
-    #about-me .left {
+    /* Adjust borders for column direction, align h2 element, and adjust borders*/
+    .left {
         border-bottom: 5px solid var(--dark);
-    }
-    #about-me .right {
-        border: none;
-    }
-    
-    #work .left {
-        border-bottom: 5px solid var(--dark);
-    }
-    #work .right {
-        border: none;
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
-    #contact-me .left {
-        border-bottom: 5px solid var(--dark);
-    }
-    #contact-me .right {
+    .right {
         border: none;
     }
-
-    #resume .left {
-        border-bottom: 5px solid var(--dark);
-    }
-    #resume .right {
-        border: none;
-    }
-}
+} 
